--- a/public/styles.css
+++ b/public/styles.css
@@ -19,6 +19,10 @@ body {
     padding: 20px;
 }
 
+h2 {
+    margin-top: 20px;
+}
+
 .header-conteiner {
     margin-bottom: 30px;
     width: 100%;
@@ -27,13 +31,60 @@ body {
 .choose-color {
     margin-bottom: 20px;
     display: flex;
-    flex-direction: row;
 }
 
 .colors {
     display: inline-block;
     width: 150px;
     height: 100px;
+    border: 1px solid black;
+    padding: 20px;
+    margin: 7px;
+}
+
+.colors:active {
+    border: 5px solid whitesmoke;
+}
+
+.colors:hover {
+    cursor: pointer;
+    width: 155px;
+    height: 105px;
+    transition: 200ms;
+}
+
+#color-1 {
+    background-color: rgb(255, 0, 0);
+}
+
+#color-2 {
+    background-color: rgb(0, 0, 255);
+}
+
+#color-3 {
+    background-color: rgb(255, 255, 0);
+}
+
+#color-4 {
+    background-color: rgb(0, 128, 0);
+}
+
+#color-5 {
+    background-color: rgb(255, 165, 0);
+} 
+
+#color-6 {
+    background-color: rgb(128, 0, 128);
+}
+
+#color-7 {
+    background-color: rgb(255, 192, 203);
+}
+
+.color-result {
+    display: inline-block;
+    width: 300px;
+    height: 200px;
     border: 1px solid black;
     padding: 20px;
 }
